haha turned out it did not work fully :D fixed noOverlap calculation